Fix #12 lower bar had become invisible

--- a/styles/default.css
+++ b/styles/default.css
@@ -9,6 +9,7 @@
 
 #supernerd-widget-bar-bottom-coffee {
   bottom:0px;
+  width:var(--width);
 }
 
 .bar-container {
